<resources>
    <string name="app_name">Wifi Heat Map</string>
    <string name="home_network_prompt">Select a network to view while collecting data:</string>
    <string name="home_data_collection_warning">When you select a network, you are choosing which one to see in the map view. The app will collect data on all visible networks in the background. If you wish to not collect data on a particular network, you will need to blacklist the network.</string>
    <string name="ssid">Network SSID</string>
    <string name="current_strength">Current Strength</string>
    <string name="has_record">Has Record</string>
    <string name="wifi_strength_description">The strength of the indicated Wi-Fi</string>
    <string name="record_indicator_description">An indicator showing if a previous record eists for the indicated network SSID</string>
    <string name="vertical_more_description">A button for getting options about the network</string>
    <string name="delete_network_data">Delete all data about this network</string>
    <string name="blacklist_prompt">Don\'t collect data about this network</string>
    <string name="unblacklist_prompt">Collect data about this network</string>
    <string name="refresh">Refresh</string>
    <string name="toggle_dark_mode">Toggle Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="toggle_color_blind">Toggle Color Blind Friendly Gradient</string>
    <string name="date_range">Date Range:</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="db_nav_prompt">Manage Data</string>
    <string name="small_tiles">Small Tiles</string>
    <string name="large_tiles">Large Tiles</string>
</resources>