<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DatabaseManagementFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/home_fragment_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin_medium"
            android:layout_marginTop="@dimen/app_margin_medium"
            android:layout_marginEnd="16dp"
            android:text="@string/home_network_prompt"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin_small"
            android:layout_marginTop="@dimen/app_margin_large"
            android:layout_marginEnd="@dimen/app_margin_small"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_fragment_title">

            <TextView
                android:id="@+id/ssid_column_title"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ssid" />

            <TextView
                android:id="@+id/strength_column_title"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/current_strength"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/record_column_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/has_record"
                android:textAlignment="center"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/data_collection_explanation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin_small"
            android:layout_marginEnd="@dimen/app_margin_small"
            android:layout_marginBottom="@dimen/app_margin_small"
            android:text="@string/home_data_collection_warning"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/networksRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/app_margin_small"
            android:layout_marginTop="@dimen/app_margin_small"
            android:layout_marginEnd="@dimen/app_margin_small"
            android:layout_marginBottom="@dimen/app_margin_small"
            app:layout_constraintBottom_toTopOf="@+id/data_collection_explanation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>