<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/ssid_label"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/app_margin_small"
        android:layout_marginEnd="@dimen/app_margin_medium"
        android:layout_weight="1"
        android:text="FBI Surveillance Van"
        app:layout_constraintEnd_toStartOf="@+id/wifi_strength"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/wifi_strength"
        android:layout_width="@dimen/indicator_width"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/app_margin_extra_large"
        android:layout_weight="1"
        android:contentDescription="@string/wifi_strength_description"
        app:layout_constraintEnd_toStartOf="@+id/network_record_indicator"
        app:srcCompat="@drawable/ic_signal_wifi_3_bar_black_24dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/network_record_indicator"
        android:layout_width="@dimen/indicator_width"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/app_margin_medium"
        android:layout_weight="1"
        android:contentDescription="@string/record_indicator_description"
        app:layout_constraintEnd_toStartOf="@+id/more_button"
        app:srcCompat="@drawable/ic_check_black_24dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/more_button"
        android:layout_width="@dimen/indicator_width"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/app_margin_extra_small"
        android:layout_weight="1"
        android:contentDescription="@string/vertical_more_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_more_vert_black_24dp"
        tools:layout_editor_absoluteY="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>